--- a/backend/Web/appsettings.json
+++ b/backend/Web/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "JwtKey": "6cIQO8VX+bzSv3XH/N5nAyDX8iRDKHO0ZaUVMunVI6s=",
+    //"JwtExpireDays":  15,
+    "JwtIssuer": "BoardGameApp"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,4 +14,6 @@
   "ConnectionStrings": {
     "BoardGameAppDbContext": "Server=NATALIA\\SQLEXPRESS;Database=BoardGameAppDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
+
+
 }
