add jwtsettings and services

--- a/backend/Web/appsettings.json
+++ b/backend/Web/appsettings.json
@@ -1,7 +1,6 @@
 {
-  "Jwt": {
+  "JwtSettings": {
     "JwtKey": "6cIQO8VX+bzSv3XH/N5nAyDX8iRDKHO0ZaUVMunVI6s=",
-    //"JwtExpireDays":  15,
     "JwtIssuer": "BoardGameApp"
   },
   "Logging": {
