generate jwt token

--- a/backend/Web/appsettings.json
+++ b/backend/Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "JwtSettings": {
     "JwtKey": "6cIQO8VX+bzSv3XH/N5nAyDX8iRDKHO0ZaUVMunVI6s=",
+    "JwtExpireTime": 600,
     "JwtIssuer": "BoardGameApp"
   },
   "Logging": {
