--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,61 +1,52 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# Outputs
+bazel-*
+test-project-host-*
+dist/
+dist-schema/
 
-# Compiled output
-/dist
-/tmp
-/out-tsc
-# Only exists if Bazel was run
-/bazel-out
+# IDEs
+jsconfig.json
 
-# Dependencies
-/node_modules
+# Intellij IDEA/WebStorm
+# https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea/inspectionProfiles/
+.idea/**/compiler.xml
+.idea/**/encodings.xml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
-# Cordova
-/www
-/plugins
-/platforms
+# Also ignore code styles because .editorconfig is used instead.
+.idea/codeStyles/
 
-# Electron
-/dist-electron
-/dist-packages
-/electron.main.js
-
-# IDEs and editors
-.idea/*
-!.idea/runConfigurations/
-!.idea/codeStyleSettings.xml
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-xcuserdata/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
+# VSCode
+# https://github.com/github/gitignore/blob/master/Global/VisualStudioCode.gitignore
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+**/*.code-workspace
 
-# Maven
-/target
-/log
+# Typings file.
+typings/
 
 # Misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-/reports
-/src/translations/template.*
-# /src/environments/.env.*
+coverage/
+node_modules/
+tmp/
+npm-debug.log*
+yarn-error.log*
+.ng_pkg_build/
+.ng-dev.log
+.ng-dev.err*.log
+.ng-dev.user*
+.husky/_
+.bazelrc.user
+.eslintcache
 
-# System Files
+# Mac OSX Finder files.
+**/.DS_Store
 .DS_Store
-Thumbs.db
