--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
+    "font-awesome": "^4.7.0",
+    "primeicons": "^6.0.1",
     "primeng": "^16.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
