--- a/backend/Services/Services.csproj
+++ b/backend/Services/Services.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Sieves\**" />
+    <EmbeddedResource Remove="Sieves\**" />
+    <None Remove="Sieves\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.13" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.24.0" />
@@ -14,10 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Sieves\" />
   </ItemGroup>
 
 </Project>
