--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -50,11 +50,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css",
               "src/styles.css"
-
             ],
             "scripts": [
             ]
