--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
