--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "date-fns": "^3.0.6",
     "font-awesome": "^4.7.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
