--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
+    "angular2-text-mask": "^9.0.0",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "primeflex": "^3.3.1",
